--- a/informatica/design.html
+++ b/informatica/design.html
@@ -1,1 +1,96 @@
-design
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+    <title>Informática - Jorge Souza</title>
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../javascript/index.js"></script>
+    <script src="info.js"></script>
+    <link rel="icon" type="image/x-icon" href="../logo.svg">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--SEO-->
+    <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+    <meta name="description" content="O que é um computador">
+    <meta name="keywords"
+        content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+<side-bar-left></side-bar-left>
+
+
+<div class="js-page">
+
+    <div class="js-post">
+        <a href="/informatica/dev.html" class="js-button">Anterior</a>
+        <a href="/informatica/opensource.html" class="js-button" style="float: right;">Próximo</a>
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>Design Gráfico</h1>
+<p>	Outro setor promissor na área de informática é o Design Gráfico, um amplo setor que engloba nichos como publicidade e propaganda, ilustração, animação, criação de páginas web, design de embalagens, desenho técnico entre vários outros. Existe uma gama enorme de softwares de design gráfico, entre eles os mais conhecidos são:
+
+<p>Gratis:
+    <li>GIMP – Software de manipulação de imagem.</li>
+    <li>Inkscape – Software de desenho vetorial.</li>
+    <li>Krita – Software de pintura e animação.</li>
+    <li>Blender - Modelagem 3D e animação 2D e 3D.</li>
+
+<p>Pagos:
+    <li>Adobe Photoshop – Software de manipulação de imagem.</li>
+    <li>Adobe Illustrator – Software de desenho vetorial.</li>
+    <li>CorelDraw – Software de desenho vetorial.</li>
+    <li>Indesign – Software de diagramação profissional.</li>
+    <li>Powerpoint – Software de criação de apresentações de slide.</li>
+    <li>Publisher – Software de diagramação profissional.</li>
+
+<p>Desenho Técnico e Modelagem 3D (Pagos)
+    <li>3D Studio Max – Modelagem e Animação 3D</li>
+    <li>3D Studio Maya – Modelagem de Personagens e Animação 3D</li>
+    <li>Trimble SketchUp – Modelagem 3D</li>
+
+<p>	Vamos experimentar um pouco de desenho vetorial com o software gratuito e de código aberto Inkscape. Entre no site oficial do Inkscape na internet e efetue o download específico para seu sistema operacional no site inkscape.org/pt-br/.
+<p>	Ao abrir a aplicação, você terá uma tela inicial semelhante a esta:
+
+<img src="design.png" alt="">
+    
+<p>	No lado esquerdo da tela temos a Barra de Ferramentas onde encontramos várias ferramentas para desenhar. No meio da tela temos o espaço de trabalho com uma página no centro. Acima do espaço de trabalho temos a Barra de Propriedades, onde podemos alterar as propriedades de praticamente tudo que desenhamos. Abaixo do espaço de trabalho temos a paleta de cores.
+<p>	Vamos fazer um dos desenhos mais simples que existem, a bandeira do Brasil!
+<h2>O retângulo verde</h2>
+    <p>1. Procure na Barra de Ferramentas a ferramenta retângulo e clique.
+    <p>2. Clique e arraste na tela para desenhar um retângulo.
+    <p>3. Clique na ferramenta seleção e selecione o retângulo que criou.
+    <p>4. Na Barra de Propriedade altere a largura para 100 e a altura para 50.
+    <p>5. Clique no verde-escuro da paleta de cores.
+<h2>O losango amarelo</h2>
+    <p>1. Procure a ferramenta “Polígonos e Estrelas” e clique.
+    <p>2. Na Barra de Propriedade altere o tipo para polígono regular.
+    <p>3. Na quantidade de lados digite 4 e pressione Enter.
+    <p>4. Com a tecla Control pressionada, clique na tela e arraste para cima para desenhar o losango no ângulo correto.
+    <p>5. Pegue a ferramenta seleção e selecione o losango.
+    <p>6. Altere a largura para 100 e a altura para 50.
+    <p>7. Clique na cor amarela.
+<h2>O círculo azul</h2>
+    <p>1. Clique na ferramenta elipse.
+    <p>2. Com a tecla Control pressionada, clique e arraste para desenhar um círculo.
+    <p>3. Altere a largura e a altura para 40.
+    <p>4. Clique na cor azul mais escura.
+<h2>Centralizando os objetos</h2>
+    <p>1. Com a ferramenta seleção, clique e arraste abrindo uma seleção sobre todos os objetos, se alguns estiverem fora da tela, diminua o zoom rodando a scroll para trás com a tecla Control pressionada. Você pode ainda selecionar um por um mantendo a tecla Shift pressionada e clicando sobre eles.
+    <p>2. Clique no menu Objeto e selecione a opção Alinhar e Distribuir, lá no final.
+    <p>3. Na janela que abrirá, em Alinhamento, selecione “Centralizar no Eixo Vertical” e “Centralizar no Eixo Horizontal”.
+    <p>4. Está pronto o desenho! Se quiser você pode ainda exportar como imagem. Basta, com tudo selecionado, clicar no menu Arquivo, selecionar Exportar Imagem, e na janela de exportação clicar em Exportar Como, então alterar o local, o nome do arquivo e definir o tipo como JPEG.
+
+<p>	Claro que nossa bandeira ainda tem outros elementos como a faixa branca com o título “Ordem e Progresso” e as estrelas, no entanto são elementos que levariam mais tempo pois necessitam de recursos como intersecção e subtração de objetos que fugiriam do escopo desta apostila.
+<p>	Sugiro que brinque bastante com o Inkscape lendo tutoriais na internet, muita coisa bacana pode ser feita com esse software por quem adquire prática em seu uso, como, por exemplo, cartuns, paisagens, desenhos de personagens e muito mais. Você pode até mesmo participar da comunidade de usuários e tirar dúvidas.
+<p class="notas">Caso prefira se aprofundar de maneira profissional no ramo do design gráfico sugiro fazer o Curso Completo de Design Gráfico em www.jorgesouza.com.br, onde você aprenderá a trabalhar com softwares como Inkscape, Krita, CorelDraw, Illustrator, Photoshop, Publisher, Powerpoint. E aprenderá conceitos de design para desenho artístico profissional, diagramação e artes visuais para publicidade. </p>
+
+<!-- #endregion -->
+
+    </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
