--- a/informatica/oautor.html
+++ b/informatica/oautor.html
@@ -1,1 +1,43 @@
-oautor
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+    <title>Informática - Jorge Souza</title>
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../javascript/index.js"></script>
+    <script src="info.js"></script>
+    <link rel="icon" type="image/x-icon" href="../logo.svg">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--SEO-->
+    <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+    <meta name="description" content="O que é um computador">
+    <meta name="keywords"
+        content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+<side-bar-left></side-bar-left>
+
+
+<div class="js-page">
+
+    <div class="js-post">
+        <a href="/informatica/opensource.html" class="js-button">Anterior</a>
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>O autor</h1>
+<p>	Jorge Souza Oliveira dos Santos é instrutor de cursos profissionalizantes, atualmente atuando no setor de Desenvolvimento de Softwares. Baiano nascido a 05 de agosto de 1989 em Euclides da Cunha, no sertão.</p>
+<p>Em 2007, com 18 anos, enquanto cursava o terceiro ano do ensino médio, e após concluir um curso de Design Gráfico na NIT Cursos, ingressei, por indicação do professor do curso, numa vaga de Designer Gráfico estagiário na Dignart Publicidade Visual, onde permaneci até 2009, trabalhando também como adesivador e na plotagem de projetos de AutoCAD, enquanto fazia o curso de AutoCAD, também na NIT Cursos, para me aperfeiçoar no trabalho de plotagem.</p>
+<p>	Em 2009, decidido a trabalhar como projetista, encontrei uma vaga, também de estagiário, dessa vez cadista, no escritório Zamuner Arquitetura, a passagem foi curta, pois ao final daquele mesmo ano, o arquiteto fechou o escritório para retornar para o Paraná, mas antes, me indicou para trabalhar na cidade vizinha no escritório de decoração que lhe auxiliava no projetos. Em 2010 me mudei para Barreiras, e fui trabalhar no escritório da Light and Design Interiores, como projetista, apesar da difícil adaptação à cidade por causa do transporte, trabalhei na Light and Design até o início de 2011, quando retornei para Luis Eduardo Magalhães, e fui chamado pela NIT Cursos para ministrar o Curso de AutoCAD, o qual fui co-autor desenvolvendo também o material didático e a metodologia de ensino. Devido ao trabalho em horário comercial como cadista na Radoll Arquitetura, ministrei as aulas de AutoCAD no período noturno e aos sábados, isso do começo de 2011 ao final de 2016. Até 2018 trabalhei ainda como cadista em escritórios de arquitetura, e duas vezes por contrato temporário em agências de Comunicação Visual. Além de ministrar aulas de AutoCAD também na Microlins.</p>
+<p>	A partir de 2018 comecei a trabalhar como freelancer e iniciei minha formação em Programação já acumulando atualmente sete certificados e alguns projetos concluídos com êxito. Atualmente me dedico exclusivamente ao desenvolvimento em Javascript, C e .NET, nos setores web, desktop, gráfico e móvel.</p>
+
+<!-- #endregion -->
+
+    </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
