--- a/informatica/servicos.html
+++ b/informatica/servicos.html
@@ -1,1 +1,56 @@
-servicos
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+    <title>Informática - Jorge Souza</title>
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../javascript/index.js"></script>
+    <script src="info.js"></script>
+    <link rel="icon" type="image/x-icon" href="../logo.svg">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--SEO-->
+    <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+    <meta name="description" content="O que é um computador">
+    <meta name="keywords"
+        content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+<side-bar-left></side-bar-left>
+
+
+<div class="js-page">
+
+    <div class="js-post">
+        <a href="/informatica/log.html" class="js-button">Anterior</a>
+        <a href="/informatica/drivers.html" class="js-button" style="float: right;">Próximo</a>
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>Serviços</h1>
+<p> Cada programa rodando em nosso computador pertence a um serviço, lembrando que nem todos os programas que
+rodam num computador precisam ter uma interface gráfica (janela, caixa de mensagem etc.) visível. Os
+programas que não estão visualmente ativos, pertencem a processos que rodam em “segundo plano”.</p>
+<p> Alguns serviços são fundamentais para o funcionamento do computador, e costumam iniciar imediatamente quando
+o computador é ligado. O Windows fornece uma lista completa com os serviços disponíveis, diferenciando os
+que estão ativos, os que estão marcados para iniciar com o Windows e os que estão desativados. Já vimos que
+podemos acessar essa lista de serviços pelo Gerenciador de Tarefas, mas podemos acessar ainda o aplicativo
+Serviços e iniciar ou parar um serviço ou marcá-lo como “Manual”, ou seja, que não iniciará automaticamente.
+</p>
+
+<img src="servicos.png" alt="">
+
+<p>	Para acessar o aplicativo Serviços vá até Iniciar → Ferramentas Administrativas → Serviços.</p>
+<p>	Você pode ainda abrir o aplicativo Serviços pressionando ⊞+R e digitando: services.msc</p>
+<p class="notas">Tome cuidado para não desativar serviços essenciais para o funcionamento do computador, alguns controlam conexão de rede, execução de áudio e vídeo entre outras tarefas importantes.</p>
+
+<!-- #endregion -->
+
+
+    </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
