--- a/javascript/menu.html
+++ b/javascript/menu.html
@@ -1,25 +1,9 @@
 <div class="js-nav">
   <ul>
-    <li tabindex="1"><a href="https://www.jorgesouza.com.br/">Início</a></li>
-    <li class="js-drop-button" tabindex="2">
-      <a>Aprendizado <i class="seta"></i></a>
-      <div class="js-drop-content">
-        <a href="https://www.jorgesouza.com.br/informatica/intro">Informática</a>
-        <a href="#">Design Gráfico</a>
-        <hr>
-        <pre><small>Desenvolvimento Web:</small></pre>
-        <a>1. Web Design</a>
-        <a>2. Javascript</a>
-        <a>3. Aplicações Web e APIs</a>
-        <hr>
-        <pre><small>Programação:</small></pre>
-        <a>1. Desktop</a>
-        <a>2. Móvel</a>
-        <a>3. Gráficos e Multimídia</a>
-        <a>4. Jogos</a>
-      </div>
-    </li>
-    <li tabindex="3"><a>Apostilas</a></li>
+    <li><a href=""></a></li>
+    <li tabindex="1"><a href="/index.html">Início</a></li>
+    <li tabindex="2"><a href="/aprendizado.html">Aprendizado</a></li>
+    <li tabindex="3"><a href="/apostilas.html">Apostilas</a></li>
   </ul>
   <style>
     .seta {
