--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  
-  <title>Jorge Oliveira Santos</title>
+
+  <title>Jorge Souza</title>
   <link rel="stylesheet" href="css/index.css">
   <script src="javascript/index.js"></script>
-  <link rel="icon" type="image/x-icon" href="logo.svg">
-  <meta charset="UTF-8"/>
-  <meta name="viewport"  content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="/logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--SEO-->
-  <meta name="author" content="Jorge Souza Oliveira dos Santos"/>
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
   <meta name="description" content="Jorge Souza Oliveira dos Santos">
-  <meta name="keywords"
-    content="informatica, curso, computador, computacao, programação, tecnologia, info, 
+  <meta name="keywords" content="informatica, curso, computador, computacao, programação, tecnologia, info, 
     desenvolvimento, web, design, web design, design grafico, tech, 
     visual studio, visual studio code, vs code, c#, javascript, dotnet,
     node js, dev express, html, css">
@@ -21,47 +21,66 @@
 <menu-bar></menu-bar>
 
 
-  <div class="img-slider">
-    <a href="#" class="banner"><img id="img4" src="files/capa4.webp" alt=""></a>
-    <a href="#" class="banner"><img id="img3" src="files/capa3.webp" alt=""></a>
-    <a href="#" class="banner"><img id="img2" src="files/capa2.webp" alt=""></a>
-    <a href="#" class="banner"><img id="img1" src="files/capa1.webp" alt=""></a>
+<div class="img-slider">
+  <a href="#" class="banner"><img id="img4" src="files/capa4.webp" alt=""></a>
+  <a href="#" class="banner"><img id="img3" src="files/capa3.webp" alt=""></a>
+  <a href="#" class="banner"><img id="img2" src="files/capa2.webp" alt=""></a>
+  <a href="#" class="banner"><img id="img1" src="files/capa1.webp" alt=""></a>
+</div>
+
+<div>
+  <div class="js-post"
+    style="background-image: linear-gradient(#333, black); margin: 25px 5% 25px 5%;
+    border: 1px solid; border-image: linear-gradient(#FB0, #730)1;">
+    <div style="display: inline-block; vertical-align: top;">
+      <h3>Formação</h3>
+      <ul>
+        <li>Ensino Médio Completo</li>
+        <li>Inglês Básico</li>
+        <li>Espanhol Básico</li>
+      </ul>
+    </div>
+    <div style="display: inline-block; vertical-align: top; margin-right: 25px;">
+      <h3>Habilidades</h3>
+      <ul>
+        <li>Instrutor de Cursos Técnicos</li>
+        <li>Design Gráfico em Comunicação Visual</li>
+        <li>Modelagem 3D</li>
+        <li>Desenvolvimento Desktop em .NET Core e Electron</li>
+        <li>Desenvolvimento Web em ASP .NET Core e Node JS</li>
+        <li>Desenvolvimento Móvel em React Native</li>
+        <li>Desenvolvimento em C/C++</li>
+      </ul>
+    </div>
   </div>
 
-  <div>
-  <div class="js-post" style="background-image: linear-gradient(#C00, #200); margin: 25px 5% 25px 5%; border: #FB05 1px solid; border-radius: 15px;">
-  <div style="display: inline-block; vertical-align: top;">
-    <h3>Formação</h3>
-    <ul>
-      <li>Ensino Médio Completo</li>
-      <li>Inglês Básico</li>
-      <li>Espanhol Básico</li>
-    </ul>
-  </div>
-  <div style="display: inline-block; vertical-align: top; margin-right: 25px;">
-    <h3>Habilidades</h3>
-    <ul>
-      <li>Instrutor de Cursos Técnicos</li>
-      <li>Design Gráfico em Comunicação Visual</li>
-      <li>Modelagem 3D</li>
-      <li>Desenvolvimento Desktop em .NET Core e Electron</li>
-      <li>Desenvolvimento Web em ASP .NET Core e Node JS</li>
-      <li>Desenvolvimento Móvel em React Native</li>
-      <li>Desenvolvimento em C/C++</li>
-    </ul>
-  </div>
-  </div>
-
-  <div class="js-post" style="background-image: linear-gradient(#A0A, #202); color: white; margin: 25px 5% 25px 5%; border: #FB05 1px solid; border-radius: 15px;">
+  <div class="js-post"
+    style="background-image: linear-gradient(#333, black); color: white; margin: 25px 5% 25px 5%;
+    border: 1px solid; border-image: linear-gradient(#FB0, #730)1;">
     <h3>Carreira</h3>
     <p>
-      Em 2007, com 18 anos, enquanto cursava o terceiro ano do ensino médio, e após concluir um curso de Design Gráfico na NIT Cursos, ingressei, por indicação do professor do curso, numa vaga de Designer Gráfico estagiário na Dignart Publicidade Visual, onde permaneci até 2009, trabalhando também como adesivador e na plotagem de projetos de AutoCAD, enquanto fazia o curso de AutoCAD, também na NIT Cursos, para me aperfeiçoar no trabalho de plotagem.
+      Em 2007, com 18 anos, enquanto cursava o terceiro ano do ensino médio, e após concluir um curso de Design Gráfico
+      na NIT Cursos, ingressei, por indicação do professor do curso, numa vaga de Designer Gráfico estagiário na Dignart
+      Publicidade Visual, onde permaneci até 2009, trabalhando também como adesivador e na plotagem de projetos de
+      AutoCAD, enquanto fazia o curso de AutoCAD, também na NIT Cursos, para me aperfeiçoar no trabalho de plotagem.
     </p>
     <p>
-      Em 2009, decidido a trabalhar como projetista, encontrei uma vaga, também de estagiário, dessa vez cadista, no escritório Zamuner Arquitetura, a passagem foi curta, pois ao final daquele mesmo ano, o arquiteto fechou o escritório para retornar para o Paraná, mas antes, me indicou para trabalhar na cidade vizinha no escritório de decoração que lhe auxiliava no projetos. Em 2010 me mudei para Barreiras, e fui trabalhar no escritório da Light and Design Interiores, como projetista, apesar da difícil adaptação à cidade por causa do transporte, trabalhei na Light and Design até o início de 2011, quando retornei para Luis Eduardo Magalhães, e fui chamado pela NIT Cursos para ministrar o Curso de AutoCAD, o qual fui co-autor desenvolvendo também o material didático e a metodologia de ensino. Devido ao trabalho em horário comercial como cadista na Radoll Arquitetura, ministrei as aulas de AutoCAD no período noturno e aos sábados, isso do começo de 2011 ao final de 2016. Até 2018 trabalhei ainda como cadista em escritórios de arquitetura, e duas vezes por contrato temporário em agências de Comunicação Visual. Além de ministrar aulas de AutoCAD também na Microlins.
+      Em 2009, decidido a trabalhar como projetista, encontrei uma vaga, também de estagiário, dessa vez cadista, no
+      escritório Zamuner Arquitetura, a passagem foi curta, pois ao final daquele mesmo ano, o arquiteto fechou o
+      escritório para retornar para o Paraná, mas antes, me indicou para trabalhar na cidade vizinha no escritório de
+      decoração que lhe auxiliava no projetos. Em 2010 me mudei para Barreiras, e fui trabalhar no escritório da Light
+      and Design Interiores, como projetista, apesar da difícil adaptação à cidade por causa do transporte, trabalhei na
+      Light and Design até o início de 2011, quando retornei para Luis Eduardo Magalhães, e fui chamado pela NIT Cursos
+      para ministrar o Curso de AutoCAD, o qual fui co-autor desenvolvendo também o material didático e a metodologia de
+      ensino. Devido ao trabalho em horário comercial como cadista na Radoll Arquitetura, ministrei as aulas de AutoCAD
+      no período noturno e aos sábados, isso do começo de 2011 ao final de 2016. Até 2018 trabalhei ainda como cadista
+      em escritórios de arquitetura, e duas vezes por contrato temporário em agências de Comunicação Visual. Além de
+      ministrar aulas de AutoCAD também na Microlins.
     </p>
     <p>
-      A partir de 2018 comecei a trabalhar como freelancer e iniciei minha formação em Programação já acumulando atualmente sete certificados e alguns projetos concluídos com êxito. Atualmente me dedico exclusivamente ao desenvolvimento em Javascript, C e .NET, nos setores web, desktop, gráfico e móvel.
+      A partir de 2018 comecei a trabalhar como freelancer e iniciei minha formação em Programação já acumulando
+      atualmente sete certificados e alguns projetos concluídos com êxito. Atualmente me dedico exclusivamente ao
+      desenvolvimento em Javascript, C e .NET, nos setores web, desktop, gráfico e móvel.
     </p>
   </div>
 </div>
