--- a/informatica/log.html
+++ b/informatica/log.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-    <title>Informática - Jorge Souza</title>
+    <title>Informática | Jorge Souza</title>
     <link rel="stylesheet" href="../css/index.css">
     <script src="../javascript/index.js"></script>
     <script src="info.js"></script>
