--- a/aprendizado.html
+++ b/aprendizado.html
@@ -28,27 +28,27 @@
 <!--#region CURSOS -->
 <div class="container">
   <div class="child">
-    <img src="files/web.webp" alt="">
+    <img src="/files/web.webp" alt="">
     <div class="overlay">
-      <a href="#">
+      <a href="#" style="text-decoration: none;">
         <p style="font-size: x-large; font-weight: bold;">Web Design</p>
         <p>Aprenda Web, HTML, CSS e Web Design Responsivo</p>
       </a>
     </div>
   </div>
   <div class="child">
-    <img src="files/design.webp" alt="">
+    <img src="/files/design.webp" alt="">
     <div class="overlay">
-      <a href="#">
+      <a href="#" style="text-decoration: none;">
         <p style="font-size: x-large; font-weight: bold;">Design Gráfico</p>
         <p>Aprenda os conceitos fundamentais de design gráfico</p>
       </a>
     </div>
   </div>
   <div class="child">
-    <img src="files/info.webp" alt="">
+    <img src="/files/info.webp" alt="">
     <div class="overlay">
-      <a href="/informatica/intro.html">
+      <a href="/informatica/intro.html" style="text-decoration: none;">
         <p style="font-size: x-large; font-weight: bold;">Informática</p>
         <p>Aprenda informática básica e avançada e muito mais</p>
       </a>
