--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 
   <title>Jorge Souza</title>
-  <link rel="stylesheet" href="css/index.css">
-  <script src="javascript/index.js"></script>
+  <link rel="stylesheet" href="/css/index.css">
+  <script src="/javascript/index.js"></script>
   <link rel="icon" type="image/x-icon" href="/logo.svg">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
