--- a/apostilas.html
+++ b/apostilas.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-
+  
   <title>Jorge Souza</title>
-  <link rel="stylesheet" href="css/index.css">
-  <script src="javascript/index.js"></script>
-  <link rel="icon" type="image/x-icon" href="logo.svg">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/css/index.css">
+  <script src="/javascript/index.js"></script>
+  <link rel="icon" type="image/x-icon" href="/logo.svg">
+  <meta charset="UTF-8"/>
+  <meta name="viewport"  content="width=device-width, initial-scale=1">
   <!--SEO-->
-  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="author" content="Jorge Souza Oliveira dos Santos"/>
   <meta name="description" content="Jorge Souza Oliveira dos Santos">
-  <meta name="keywords" content="informatica, curso, computador, computacao, programação, tecnologia, info, 
+  <meta name="keywords"
+    content="informatica, curso, computador, computacao, programação, tecnologia, info, 
     desenvolvimento, web, design, web design, design grafico, tech, 
     visual studio, visual studio code, vs code, c#, javascript, dotnet,
     node js, dev express, html, css">
@@ -20,25 +20,93 @@
 
 <menu-bar></menu-bar>
 
-
-<div class="img-slider">
-  <a href="#" class="banner"><img id="img4" src="files/capa4.webp" alt=""></a>
-  <a href="#" class="banner"><img id="img3" src="files/capa3.webp" alt=""></a>
-  <a href="#" class="banner"><img id="img2" src="files/capa2.webp" alt=""></a>
-  <a href="#" class="banner"><img id="img1" src="files/capa1.webp" alt=""></a>
+<div class="js-post">
+  <h1>Apostilas impressas</h1>
+  <p>Confira aqui a lista atualizada de apostilas diretas disponibilizadas pelo autor na plataforma do Clube de Autores.</p>
 </div>
 
-<div>
-  <div class="js-post"
-    style="background-image: linear-gradient(#333, black); margin: 25px 5% 25px 5%;
-    border: 1px solid; border-image: linear-gradient(#FB0, #730)1;">
-    <div style="display: inline-block; vertical-align: top;">
+<!--#region CURSOS -->
+<div class="container">
+  <div class="child">
+    <img src="/files/webDesignCapa.webp" alt="">
+    <div class="overlay">
+      <a href="https://clubedeautores.com.br/livro/curso-de-web-design-2" target="_blank">
+        <p style="font-size: x-large; font-weight: bold;">Web Design</p>
+        <p>Aprenda Web, HTML, CSS e Web Design Responsivo</p>
+      </a>
     </div>
-    <div style="display: inline-block; vertical-align: top; margin-right: 25px;">
+  </div>
+  <div class="child">
+    <img src="/files/designCapa.webp" alt="">
+    <div class="overlay">
+      <a href="https://clubedeautores.com.br/livro/curso-completo-de-design-grafico" target="_blank">
+        <p style="font-size: x-large; font-weight: bold;">Design Gráfico</p>
+        <p>Aprenda os conceitos fundamentais de design gráfico</p>
+      </a>
+    </div>
+  </div>
+  <div class="child">
+    <img src="/files/informaticaCapa.webp" alt="">
+    <div class="overlay">
+      <a href="https://clubedeautores.com.br/livro/curso-de-informatica-basica-e-avancada" target="_blank">
+        <p style="font-size: x-large; font-weight: bold;">Informática</p>
+        <p>Aprenda informática básica e avançada e muito mais</p>
+      </a>
     </div>
   </div>
 </div>
+<style>
+  * {
+    box-sizing: border-box;
+  }
+  .overlay {
+    position: absolute;
+    bottom: 0;
+    background-color: #FB0;
+    transition: 500ms ease-in-out;
+    font-family: sans-serif;
+    text-align: center;
+    padding: 20px;
+    margin: auto;
+    width: 100%;
+    opacity: 0;
+  }
+  .overlay a{
+    text-decoration: none;
+    color: black;
+  }
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 25px 0 25px 0;
+    max-width: 100%;
+  }
+  .child {
+    position: relative;
+    max-width: 30%;
+    min-width: 230px;
+    margin: 20px;
+    margin: auto;
+  }
+  .child img {
+    display: block;
+    width: 100%;
+    border: 1px solid;
+    border-image: linear-gradient(45deg, yellow, #A50)1;
+  }
+  .child:hover .overlay {opacity: 1;}
+  @media (max-width: 800px) {
+    .child { max-width: 100%; margin: 20px;}
+    .container { flex-direction: row; }
+  }
+</style>
+<!--#endregion -->
 
+<div class="js-post">
+  <h2>Prefere estudar on-line?</h2>
+  <p>Todo o conteúdo das apostilas está disponível gratuito para estudo no link a seguir:</p>
+  <a class="js-button" href="/aprendizado.html">Apostilas</a>
+</div>
 
 </html>
 
