--- a/apostilas.html
+++ b/apostilas.html
@@ -105,7 +105,7 @@
 <div class="js-post">
   <h2>Prefere estudar on-line?</h2>
   <p>Todo o conteúdo das apostilas está disponível gratuito para estudo no link a seguir:</p>
-  <a class="js-button" href="/aprendizado.html">Apostilas</a>
+  <a class="js-button" href="/aprendizado.html">Aprendizado on-line</a>
 </div>
 
 </html>
