--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 
   <title>Jorge Souza</title>
-  <link rel="stylesheet" href="/css/index.css">
-  <script src="/javascript/index.js"></script>
-  <link rel="icon" type="image/x-icon" href="/logo.svg">
+  <link rel="stylesheet" href="/css/index.css"> <!--remover / inicial para desenvolvimento -->
+  <script src="/javascript/index.js"></script> <!--remover / inicial para desenvolvimento -->
+  <link rel="icon" type="image/x-icon" href="/logo.svg"> <!--remover / inicial para desenvolvimento -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--SEO-->
@@ -22,10 +22,10 @@
 
 
 <div class="img-slider">
-  <a href="#" class="banner"><img id="img4" src="files/capa4.webp" alt=""></a>
-  <a href="#" class="banner"><img id="img3" src="files/capa3.webp" alt=""></a>
-  <a href="#" class="banner"><img id="img2" src="files/capa2.webp" alt=""></a>
-  <a href="#" class="banner"><img id="img1" src="files/capa1.webp" alt=""></a>
+  <a href="#" class="banner"><img id="img4" src="/files/capa4.webp" alt=""></a> <!--remover / inicial para desenvolvimento -->
+  <a href="#" class="banner"><img id="img3" src="/files/capa3.webp" alt=""></a> <!--remover / inicial para desenvolvimento -->
+  <a href="#" class="banner"><img id="img2" src="/files/capa2.webp" alt=""></a> <!--remover / inicial para desenvolvimento -->
+  <a href="#" class="banner"><img id="img1" src="/files/capa1.webp" alt=""></a> <!--remover / inicial para desenvolvimento -->
 </div>
 
 <div class="js-post">
@@ -36,36 +36,36 @@
 <!--#region CURSOS -->
 <div class="container">
   <div class="child">
-    <img src="/files/dev.svg" alt="">
+    <img src="/files/dev.svg" alt=""> <!--remover / inicial para desenvolvimento -->
     <div class="overlay">
-      <a href="/" target="_blank">
+      <a href="/aprendizado.html"> <!--remover / inicial para desenvolvimento -->
         <p style="font-size: x-large; font-weight: bold;">Desenvolvimento</p>
         <p>Desenvolvimento de aplicações web, móvel e desktop.</p>
       </a>
     </div>
   </div>
   <div class="child">
-    <img src="/files/books.svg" alt="">
+    <img src="/files/books.svg" alt=""> <!--remover / inicial para desenvolvimento -->
     <div class="overlay">
-      <a href="#" target="_blank">
+      <a href="/apostilas.html"> <!--remover / inicial para desenvolvimento -->
         <p style="font-size: x-large; font-weight: bold;">Manuais e Apostilas</p>
         <p>Apostilas do setor tecnológico com metodologia para sala de aula.</p>
       </a>
     </div>
   </div>
   <div class="child">
-    <img src="/files/learn.svg" alt="">
+    <img src="/files/learn.svg" alt=""> <!--remover / inicial para desenvolvimento -->
     <div class="overlay">
-      <a href="#" target="_blank">
+      <a href="/aprendizado.html"> <!--remover / inicial para desenvolvimento -->
         <p style="font-size: x-large; font-weight: bold;">Aprendizado</p>
         <p>Aprendizado on-line e gratuito a sua disposição a qualquer momento.</p>
       </a>
     </div>
   </div>
   <div class="child">
-    <img src="/files/contacts.svg" alt="">
+    <img src="/files/contacts.svg" alt=""> <!--remover / inicial para desenvolvimento -->
     <div class="overlay">
-      <a href="#" target="_blank">
+      <a href="/aprendizado.html"> <!--remover / inicial para desenvolvimento -->
         <p style="font-size: x-large; font-weight: bold;">Contato</p>
         <p>Entre em contato por um canal de sua preferência.</p>
       </a>
@@ -100,6 +100,7 @@
   }
   .child {
     position: relative;
+    fill: white;
     background-image: linear-gradient(yellow, #A50);
     max-width: 23%;
     min-width: 230px;
