--- a/aprendizado.html
+++ b/aprendizado.html
@@ -3,9 +3,9 @@
 <head>
   
   <title>Jorge Souza</title>
-  <link rel="stylesheet" href="/css/index.css">
-  <script src="/javascript/index.js"></script>
-  <link rel="icon" type="image/x-icon" href="/logo.svg">
+  <link rel="stylesheet" href="./css/index.css">
+  <script src="./javascript/index.js"></script>
+  <link rel="icon" type="image/x-icon" href="./logo.svg">
   <meta charset="UTF-8"/>
   <meta name="viewport"  content="width=device-width, initial-scale=1">
   <!--SEO-->
@@ -28,7 +28,7 @@
 <!--#region CURSOS -->
 <div class="container">
   <div class="child">
-    <img src="files/web.webp" alt="">
+    <img src="./files/web.webp" alt="">
     <div class="overlay">
       <a href="#">
         <p style="font-size: x-large; font-weight: bold;">Web Design</p>
@@ -37,7 +37,7 @@
     </div>
   </div>
   <div class="child">
-    <img src="files/design.webp" alt="">
+    <img src="./files/design.webp" alt="">
     <div class="overlay">
       <a href="#">
         <p style="font-size: x-large; font-weight: bold;">Design Gráfico</p>
@@ -46,7 +46,7 @@
     </div>
   </div>
   <div class="child">
-    <img src="files/info.webp" alt="">
+    <img src="./files/info.webp" alt="">
     <div class="overlay">
       <a href="/informatica/intro.html">
         <p style="font-size: x-large; font-weight: bold;">Informática</p>
