--- a/apostilas.html
+++ b/apostilas.html
@@ -3,9 +3,9 @@
 <head>
   
   <title>Jorge Souza</title>
-  <link rel="stylesheet" href="/css/index.css"> <!--remover / inicial para desenvolvimento -->
-  <script src="/javascript/index.js"></script> <!--remover / inicial para desenvolvimento -->
-  <link rel="icon" type="image/x-icon" href="/logo.svg"> <!--remover / inicial para desenvolvimento -->
+  <link rel="stylesheet" href="./css/index.css"> 
+  <script src="./javascript/index.js"></script> 
+  <link rel="icon" type="image/x-icon" href="./logo.svg"> 
   <meta charset="UTF-8"/>
   <meta name="viewport"  content="width=device-width, initial-scale=1">
   <!--SEO-->
@@ -28,7 +28,7 @@
 <!--#region CURSOS -->
 <div class="container">
   <div class="child">
-    <img src="/files/webDesignCapa.webp" alt=""> <!--remover / inicial para desenvolvimento -->
+    <img src="./files/webDesignCapa.webp" alt=""> 
     <div class="overlay">
       <a href="https://clubedeautores.com.br/livro/curso-de-web-design-2" target="_blank">
         <p style="font-size: x-large; font-weight: bold;">Web Design</p>
@@ -37,7 +37,7 @@
     </div>
   </div>
   <div class="child">
-    <img src="/files/designCapa.webp" alt=""> <!--remover / inicial para desenvolvimento -->
+    <img src="./files/designCapa.webp" alt=""> 
     <div class="overlay">
       <a href="https://clubedeautores.com.br/livro/curso-completo-de-design-grafico" target="_blank">
         <p style="font-size: x-large; font-weight: bold;">Design Gráfico</p>
@@ -46,7 +46,7 @@
     </div>
   </div>
   <div class="child">
-    <img src="/files/informaticaCapa.webp" alt=""> <!--remover / inicial para desenvolvimento -->
+    <img src="./files/informaticaCapa.webp" alt=""> 
     <div class="overlay">
       <a href="https://clubedeautores.com.br/livro/curso-de-informatica-basica-e-avancada" target="_blank">
         <p style="font-size: x-large; font-weight: bold;">Informática</p>
