--- a/informatica/areatrabalho.html
+++ b/informatica/areatrabalho.html
@@ -24,8 +24,8 @@
 
 <div class="js-page">
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/oconceito" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/mouse" class="js-button" style="float: right;">Próximo</a>
+    <a href="/informatica/oconceito" class="js-button">Anterior</a>
+    <a href="/informatica/mouse" class="js-button" style="float: right;">Próximo</a>
 
 
     <h1>Área de Trabalho</h1>
