--- a/informatica/manipulando.html
+++ b/informatica/manipulando.html
@@ -24,8 +24,8 @@
 <div class="js-page">
 
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/acessorios" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/msedge" class="js-button" style="float: right;">Próximo</a>
+    <a href="/informatica/acessorios" class="js-button">Anterior</a>
+    <a href="/informatica/msedge" class="js-button" style="float: right;">Próximo</a>
 
 
 <!-- #region    ============    POST    ===================   -->
