--- a/informatica/mouse.html
+++ b/informatica/mouse.html
@@ -24,8 +24,8 @@
 <div class="js-page">
 
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/areatrabalho" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/barratarefas" class="js-button" style="float: right;">Próximo</a>
+    <a href="/informatica/areatrabalho" class="js-button">Anterior</a>
+    <a href="/informatica/barratarefas" class="js-button" style="float: right;">Próximo</a>
 
 
 
