--- a/informatica/oque.html
+++ b/informatica/oque.html
@@ -24,8 +24,8 @@
 
 <div class="js-page">
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/intro" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/software" class="js-button" style="float: right;">Próximo</a>
+    <a href="/informatica/intro" class="js-button">Anterior</a>
+    <a href="/informatica/software" class="js-button" style="float: right;">Próximo</a>
 
 
     <h1>O que é um computador</h1>
