--- a/informatica/barratarefas.html
+++ b/informatica/barratarefas.html
@@ -24,8 +24,8 @@
 <div class="js-page">
 
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/mouse" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/configuracoes" class="js-button" style="float: right;">Próximo</a>
+    <a href="/informatica/mouse" class="js-button">Anterior</a>
+    <a href="/informatica/configuracoes" class="js-button" style="float: right;">Próximo</a>
 
 
 
