--- a/informatica/memoriaram.html
+++ b/informatica/memoriaram.html
@@ -24,8 +24,8 @@
 
 <div class="js-page">
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/discorigido" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/umpouco" class="js-button" style="float: right;">Próximo</a>
+    <a href="/informatica/discorigido" class="js-button">Anterior</a>
+    <a href="/informatica/umpouco" class="js-button" style="float: right;">Próximo</a>
 
 
     <h1>Memória RAM</h1>
