--- a/informatica/msedge.html
+++ b/informatica/msedge.html
@@ -24,8 +24,8 @@
 <div class="js-page">
 
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/manipulando" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/pesquisa" class="js-button" style="float: right;">Próximo</a>
+    <a href="/informatica/manipulando" class="js-button">Anterior</a>
+    <a href="/informatica/pesquisa" class="js-button" style="float: right;">Próximo</a>
 
 
 <!-- #region    ============    POST    ===================   -->
