--- a/informatica/placamae.html
+++ b/informatica/placamae.html
@@ -23,8 +23,8 @@
 
 <div class="js-page">
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/processador" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/discorigido" class="js-button" style="float: right;">Próximo</a>
+    <a href="/informatica/processador" class="js-button">Anterior</a>
+    <a href="/informatica/discorigido" class="js-button" style="float: right;">Próximo</a>
 
 
     <h1>Placa Mãe</h1>
