--- a/informatica/teclado.html
+++ b/informatica/teclado.html
@@ -24,8 +24,8 @@
 <div class="js-page">
 
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/explorador" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/unidades" class="js-button" style="float: right;">Próximo</a>
+    <a href="/informatica/explorador" class="js-button">Anterior</a>
+    <a href="/informatica/unidades" class="js-button" style="float: right;">Próximo</a>
     
 
 <!-- #region    ============    POST    ===================   -->
