--- a/aprendizado.html
+++ b/aprendizado.html
@@ -39,7 +39,7 @@
   <div class="child">
     <img src="./files/design.webp" alt="">
     <div class="overlay">
-      <a href="#">
+      <a href="./design/intro.html">
         <p style="font-size: x-large; font-weight: bold;">Design Gráfico</p>
         <p>Aprenda os conceitos fundamentais de design gráfico</p>
       </a>
